2002-05-01  Alan Modra  <amodra@bigpond.net.au>

	* nm.c (print_symbol): Check returned filename from
	bfd_find_nearest_line is non-NULL.

2002-04-25  Elena Zannoni <ezannoni@redhat.com>
    
        * readelf.c (get_AT_name): Handle DW_AT_GNU_vector.

2002-04-24  Christian Groessler <chris@groessler.org>

	* MAINTAINERS: Changed my email address.

2002-04-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* arparse.y: Fix syntax warning.

2002-04-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (fetch_location_list): Remove unused function.

	* readelf.c (process_corefile_note_segment): Catch corrupt notes
	and display a warning message, then exit the loop.

	* rcparse.y: Set MEMFLAG_DISCARDABLE by default.

2002-04-15  Nick Clifton  <nickc@cambridge.redhat.com>

	* resrc.c (write_rc_dialog): If charset is non-default value
	display all of the DIALOGEX parameters.

2002-04-15  Eric Kohl <ekohl@rz-online.de>

	* rcparse.y: Allow two to five parameter in FONT statement of 
	DIALOGEX resources.
	* resbin.c (bin_to_res_dialog): Fixed read/write code for dialogex
	resource data.
        (res_to_bin_dialog): Likewise.
	* windres.h: Added misssing charset variable to dialog_ex
	structure.

2002-04-10  Nick Clifton  <nickc@cambridge.redhat.com>

	* rcparse.y: Set MEMFLAG_PURE by default.

2002-04-09  Bernd Herd <info@herdsoft.com>

	* rcparse.y: CLASS definitions in DIALOG resources 
	are quoted.
	Fix typo in BEDIT warning.
	Don't add default dialog style when explicit style specified.
	Add WS_CAPTION dialog style if CAPTION is specified.

	* rclex.l (handle_quotes): "\xhex" encoding in strings corrected.
	(handle_quotes) "\a" escape (used for right justified key
	definitions in menus) is encodes as binary 8.

	* resrc.c (write_rc_dialog): Print style even if it is 0.
	(write_rc_directory): Fix overlooked sublang shift bug.
	(bin_to_res_dialog): Don't print empty dialog caption.

	* resbin.c (bin_to_res_dialog): Use signature to identify
	DIALOGEX.
